--- a/OAuthAttacks/Views/Manage/Index.cshtml
+++ b/OAuthAttacks/Views/Manage/Index.cshtml
@@ -9,6 +9,7 @@
 <div>
     <h4>Change your account settings</h4>
     <hr />
+    <h4>@Model.UserData</h4>
     <dl class="dl-horizontal">
         <dt>Password:</dt>
         <dd>
